@@ -258,17 +258,17 @@
       <dependency>
         <groupId>javax.xml.bind</groupId>
         <artifactId>jaxb-api</artifactId>
-        <version>2.2.11</version>
+        <version>2.3.1</version>
       </dependency>
       <dependency>
         <groupId>com.sun.xml.bind</groupId>
         <artifactId>jaxb-core</artifactId>
-        <version>3.0.1</version>
+        <version>3.0.2</version>
       </dependency>
       <dependency>
         <groupId>com.sun.xml.bind</groupId>
         <artifactId>jaxb-impl</artifactId>
-        <version>3.0.1</version>
+        <version>3.0.2</version>
       </dependency>
       <dependency>
         <groupId>javax.activation</groupId>
@@ -293,7 +293,7 @@
       <dependency>
         <groupId>it.unimi.dsi</groupId>
         <artifactId>fastutil</artifactId>
-        <version>8.5.4</version>
+        <version>8.5.6</version>
       </dependency>
       <dependency>
         <groupId>org.junit.jupiter</groupId>
@@ -385,17 +385,17 @@
       <dependency>
         <groupId>io.projectreactor</groupId>
         <artifactId>reactor-core</artifactId>
-        <version>3.4.9</version>
+        <version>3.4.10</version>
       </dependency>
       <dependency>
         <groupId>io.projectreactor</groupId>
         <artifactId>reactor-tools</artifactId>
-        <version>3.4.9</version>
+        <version>3.4.10</version>
       </dependency>
       <dependency>
         <groupId>io.projectreactor</groupId>
         <artifactId>reactor-test</artifactId>
-        <version>3.4.9</version>
+        <version>3.4.10</version>
       </dependency>
       <dependency>
         <groupId>org.novasearch</groupId>
@@ -405,7 +405,7 @@
       <dependency>
         <groupId>io.soabase.record-builder</groupId>
         <artifactId>record-builder-core</artifactId>
-        <version>1.19</version>
+        <version>26</version>
       </dependency>
       <dependency>
         <groupId>it.cavallium</groupId>
@@ -473,12 +473,11 @@
             <annotationProcessor>io.soabase.recordbuilder.processor.RecordBuilderProcessor</annotationProcessor>
           </annotationProcessors>
           <useIncrementalCompilation>false</useIncrementalCompilation>
-          <compilerArgs>
-            <arg>--enable-preview</arg>
-            <arg>--add-modules</arg>
-            <arg>jdk.incubator.foreign</arg>
+          <compilerArgs>--enable-preview
             <arg>--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED</arg>
           </compilerArgs>
+          <source>16</source>
+          <target>16</target>
         </configuration>
       </plugin>
       <plugin>
